--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -1,17 +1,2 @@
-<h2>Home Page</h2>
-<p>{{homeCtrl.pageTitle}}</p>
+<h2>HFake Promise in console</h2>
 
-<section>
-    <md-subheader class="md-primary">My profile</md-subheader>
-    <md-list layout-padding>
-        <md-list-item class="md-3-line">
-            <img ng-src="{{homeCtrl.exampleOfObj.avatarPath}}" class="md-avatar" alt="{{homeCtrl.exampleOfObj.nome}}">
-            <div class="md-list-item-text">
-                Nome: <span class="md-body-2">{{::homeCtrl.exampleOfObj.nome}}</span><br>
-                Cognome: <span class="md-body-2">{{::homeCtrl.exampleOfObj.cognome}}</span><br>
-                Et&agrave;: <span class="md-body-2">{{::homeCtrl.exampleOfObj.eta}}</span><br>
-                Professione: <span class="md-body-2">{{::homeCtrl.exampleOfObj.professione}}</span>
-            </div>
-        </md-list-item>
-    </md-list>
-</section>
